tests/ui/target-feature/abi-incompatible-target-feature-attribute.x86.stderr
error: target feature `soft-float` cannot be enabled with `#[target_feature]`: use a soft-float target instead
  --> $DIR/abi-incompatible-target-feature-attribute.rs:17:32
   |
LL | #[cfg_attr(x86, target_feature(enable = "soft-float"))] #[cfg_attr(riscv, target_feature(enable = "d"))]
   |                                ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

